# discmodel

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  setup.py  test_requirements.txt
.github/workflows/: test.yaml
src/discmodel/: __init__.py  discmodel.py  optional_imports.py
tests/: test_discmodel.py  test_optional_imports.py
